--- a/p2/index.html
+++ b/p2/index.html
@@ -8,8 +8,9 @@
     <script src="java.js"></script>
 
 </head>
-<body>
-    <div class="cuerpo">
+<body >
+    <div class="cuerpo" id="cuerpo">
+        <div id="c"></div>
         <div class="c1">
             <div id="principal"></div>
             <div id="menu"></div>
