--- a/p2/l.html
+++ b/p2/l.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Datos</title>
 </head>
-<bodyhgbsdiufnsdokfp>
- igsdiufchsdol 
- <div>hgbsdiufnsdokfp</div>
- <div>hgbsdiufnsdokfp</div>
- <div>hgbsdiufnsdokfp</div>
- <div>hgbsdiufnsdokfp</div>
- <div>hgbsdiufnsdokfp</div>
-</bodyhgbsdiufnsdokfp>
+<body>
+  <h1>Pregunta 1</h1>
+  <label for="filas">Número de filas:</label>
+  <input type="number" id="filas" min="1">
+  <br>
+  <label for="columnas">Número de columnas:</label>
+  <input type="number" id="columnas" min="1">
+  <br>
+  <button id="crear">Crear</button>
+  <div id="contenedor"></div>
+
+  <script src="datos.js"></script>
+</body>
 </html>
+<script>
+ 
+</script>
