--- a/SegundoParcial/segundo_parcial.html
+++ b/SegundoParcial/segundo_parcial.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href=".\estilos.css">
+    <link rel="stylesheet" href="estilos.css">
     <title>Segundo Parcial SIS 256</title>
     <script src="ajax.js"></script>
 </head>
@@ -19,9 +20,9 @@
                 <div class="btn-preguntas">
                     <button id="btn-pregunta1" class="btn-pregunta" onclick="pregunta1()">Pregunta 1</button>
                     <div class="lineas-verticales"></div>
-                    <button id="btn-pregunta2" class="btn-pregunta">Pregunta 2</button>
+                    <button id="btn-pregunta2" class="btn-pregunta" onclick="preguntas2('fondo_color.html',2)">Pregunta 2</button>
                     <div class="lineas-verticales"></div>
-                    <button class="btn-pregunta">Pregunta 3</button>
+                    <button class="btn-pregunta" onclick="pregunta3('galeria.php',3)">Pregunta 3</button>
                     <div class="lineas-verticales"></div>
                     <button class="btn-pregunta">Pregunta 4</button>
                     <div class="lineas-verticales"></div>
