--- a/p2/l.html
+++ b/p2/l.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Datos</title>
+  <title>Pregunta 2</title>
+  <style>
+    #contenido {
+      padding: 10px;
+    }
+  </style>
+    <script src="pregunta2.js"></script>
 </head>
 <body>
-  <h1>Pregunta 1</h1>
-  <label for="filas">Número de filas:</label>
-  <input type="number" id="filas" min="1">
-  <br>
-  <label for="columnas">Número de columnas:</label>
-  <input type="number" id="columnas" min="1">
-  <br>
-  <button id="crear">Crear</button>
-  <div id="contenedor"></div>
+  <h1>Pregunta 2</h1>
+  <div id="submenu">
+    <input type="text" id="texto" placeholder="Ingrese el texto">
+    <input type="color" id="fondo" value="#ffffff">
+    <input type="color" id="color" value="#000000">
+    <button id="crear">Crear</button>
+  </div>
+  <div id="contenido"></div>
 
-  <script src="datos.js"></script>
+
 </body>
 </html>
-<script>
- 
-</script>
