--- a/SegundoParcial/segundo_parcial.html
+++ b/SegundoParcial/segundo_parcial.html
@@ -41,7 +41,7 @@
                 Opciones
             </div>
             
-            <button class="btn-materias btn-opciones btn-op-secundarios" id="bt1" onclick="listar('listar.php')">Detalle 1</button>
+            <button class="btn-materias btn-opciones btn-op-secundarios" id="bt1" onclick="listar('lista.php')">Detalle 1</button>
             <button class="btn-materias btn-opciones btn-op-secundarios" id="bt2">Detalle 2</button>
      <div id="sub-m" > 
         </div>
