--- a/parcialFinal/final.html
+++ b/parcialFinal/final.html
@@ -64,8 +64,8 @@
     </main>
      <div class="pie-inferior">
         <div id="contador"></div>
-        <div class="cont-pie">
-          <footer id="pie"> Sucre - Semestre 1-2024</footer>
+        <div class="cont-pie" id="cont-pie">
+          <footer id="pie"> Sucre - Semestre 1-2024</footer><br>
         </div>
         <div class="cabecera-izquierda">
            <img src=".\images\escudo.jpg" alt="Escudo universidad san francisco xavier" width="150px">
@@ -74,3 +74,4 @@
     
 </body>
 </html>
+
