--- a/parcialFinal/final.html
+++ b/parcialFinal/final.html
@@ -20,9 +20,9 @@
                 <div class="btn-preguntas">
                     <button id="btn-pregunta1" class="btn-pregunta"  onclick="pregunta1()">Pregunta 1</button>
                     <div class="lineas-verticales"></div>
-                    <button id="btn-pregunta2" class="btn-pregunta">Pregunta 2</button>
+                    <button id="btn-pregunta2" class="btn-pregunta" >Pregunta 2</button>
                     <div class="lineas-verticales"></div>
-                    <button class="btn-pregunta">Pregunta 3</button>
+                    <button class="btn-pregunta"onclick="pregunta3()">Pregunta 3</button>
                     <div class="lineas-verticales"></div>
                     <button class="btn-pregunta">Pregunta 4</button>
                     <div class="lineas-verticales"></div>
