--- a/parcialFinal/final.html
+++ b/parcialFinal/final.html
@@ -24,7 +24,7 @@
                     <div class="lineas-verticales"></div>
                     <button class="btn-pregunta"onclick="pregunta3()">Pregunta 3</button>
                     <div class="lineas-verticales"></div>
-                    <button class="btn-pregunta">Pregunta 4</button>
+                    <button class="btn-pregunta"onclick="pregunta4()">Pregunta 4</button>
                     <div class="lineas-verticales"></div>
                     <button class="btn-pregunta">Pregunta 5</button>
                    
